<resources>
    <string name="app_name">Flipping Card Game</string>
    <string name="music">Music</string>
    <string name="sfx">SFX</string>
    <string name="english" translatable="false">English</string>
    <string name="default_text">DEFAULT TEXT</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="language">Language</string>
    <string name="rule_book">Rule Book</string>
    <string name="card_album">Card Album</string>
    <string name="play">Play</string>
    <string name="settings">Settings</string>
    <string name="you">You</string>
    <string name="you_lose">You LOSE</string>
    <string name="you_tied">You TIED</string>
    <string name="you_win">You WIN</string>
    <string name="welcome_main">Welcome to Flipping Card Game</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="longpress">LONG PRESS A CARD TO MOVE IT</string>
    <string name="back_button">back button</string>
    <string name="go_back">Go Back</string>
    <string name="refresh_refresh_game_button">refresh / refresh game button</string>
    <string name="mute_music_button">mute music button</string>
    <string name="rulebook_button">Rulebook button</string>
    <string name="book_icon">Rulebook icon, it is an image of a book</string>
    <string name="play_button">Play button</string>
    <string name="play_icon">Play icon, it is an image of a play button</string>
    <string name="album_button">Album button</string>
    <string name="album_icon">Album icon, it is an image of 5 cards spread out</string>
    <string name="settings_button">Settings button</string>
    <string name="settings_icon" translatable="false">Settings icon, it is an image of a gear</string>
    <string name="change_sound">Change Sound</string>
    <string name="start_new_game">Start New Game</string>
    <string name="top_left_space">Top Left Space</string>
    <string name="center_left_space">Center Left Space</string>
    <string name="bottom_left_space">Bottom Left Space</string>
    <string name="center_middle_space">Center Middle Space</string>
    <string name="top_middle_space">Top Middle Space</string>
    <string name="bottom_middle_space">Bottom Middle Space</string>
    <string name="top_right_space">Top Right Space</string>
    <string name="center_right_space">Center Right Space</string>
    <string name="bottom_right_space">Bottom Right Space</string>
    <string name="your_first_card">Your First Card</string>
    <string name="your_second_card">Your Second Card</string>
    <string name="your_third_card">Your Third Card</string>
    <string name="your_fourth_card">Your Fourth Card</string>
    <string name="your_fifth_card">Your Fifth Card</string>
    <string name="image_of_the_card">Image of the card</string>
    <string name="language_set_to_english">Language Set To English</string>
    <string name="idioma_es_espanol">Idioma Es Espanol</string>
    <string name="music_is_turned_on">Music is turned on</string>
    <string name="music_is_turned_off">Music is turned off</string>
    <string name="opponent_s_first_card">Opponent First Card</string>
    <string name="opponent_s_second_card">Opponent Second Card</string>
    <string name="opponent_s_third_card">Opponent Third Card</string>
    <string name="opponent_s_fourth_card">Opponent Fourth Card</string>
    <string name="opponent_s_fifth_card">Opponent Fifth Card</string>

</resources>